# matrix-decomposition-visualizer

./: .gitignore  Makefile  README.md  pyproject.toml  scenario.md
src/: visualize.py  visualize_svd.py
